[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/fonts/h1_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/main_menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://ui/main_menu/MainButtons.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/main_menu/connect_to_game/ConnectToGameInfo.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/main_menu/new_game/NewGameInfo.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/main_menu/connect_to_game/Connecting.tscn" type="PackedScene" id=7]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.39, 0.39, 0.39, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_right = -200.0
margin_bottom = -200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="Label" parent="VBoxContainer"]
margin_right = 1040.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 2 )
text = "Blorgs"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreensContainer" type="AspectRatioContainer" parent="VBoxContainer"]
margin_top = 129.0
margin_right = 1040.0
margin_bottom = 610.0
size_flags_vertical = 3
ratio = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainButtons" parent="VBoxContainer/ScreensContainer" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 39.0
margin_right = 1001.0
margin_bottom = 481.0
alignment = 1

[node name="NewGameInfo" parent="VBoxContainer/ScreensContainer" instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 39.0
margin_right = 1001.0
margin_bottom = 481.0
alignment = 1

[node name="ConnectToGameInfo" parent="VBoxContainer/ScreensContainer" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
margin_left = 39.0
margin_right = 1001.0
margin_bottom = 481.0

[node name="Connecting" parent="VBoxContainer/ScreensContainer" instance=ExtResource( 7 )]
visible = false
margin_left = 39.0
margin_right = 1001.0
margin_bottom = 481.0
alignment = 1

[node name="LoadingLabel" type="Label" parent="VBoxContainer/ScreensContainer"]
margin_left = 39.0
margin_top = 214.0
margin_right = 1001.0
margin_bottom = 267.0
text = "Carregando..."
align = 1

[connection signal="connect_to_game" from="VBoxContainer/ScreensContainer/MainButtons" to="." method="_on_MainButtons_connect_to_game"]
[connection signal="new_game" from="VBoxContainer/ScreensContainer/MainButtons" to="." method="_on_MainButtons_new_game"]
[connection signal="canceled" from="VBoxContainer/ScreensContainer/NewGameInfo" to="." method="_on_NewGameInfo_canceled"]
[connection signal="connection_canceled" from="VBoxContainer/ScreensContainer/ConnectToGameInfo" to="." method="_on_ConnectToGameInfo_connection_canceled"]
[connection signal="play_pressed" from="VBoxContainer/ScreensContainer/ConnectToGameInfo" to="." method="_on_ConnectToGameInfo_play_pressed"]
[connection signal="canceled" from="VBoxContainer/ScreensContainer/Connecting" to="." method="_on_Connecting_canceled"]
